[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/background.jpg" type="Texture" id=1]
[ext_resource path="res://Extra/kr-valentine-heart/KR Valentine Heart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/botones_simples.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 2 )

[node name="Menu" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.215, 361.755 )
scale = Vector2( 0.799645, 1.0065 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hub" type="Node" parent="."]

[node name="Empezar" type="Button" parent="Hub"]
margin_left = 156.0
margin_top = 484.0
margin_right = 868.0
margin_bottom = 610.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.393584, 0.190125, 0.546875, 1 )
text = "EMPEZAR"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Salir" type="Button" parent="Hub"]
margin_left = 735.0
margin_top = 10.0
margin_right = 1058.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Salir"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Hub/Empezar" to="Hub/Empezar" method="_on_Empezar_pressed"]
[connection signal="pressed" from="Hub/Salir" to="Hub/Salir" method="_on_Salir_pressed"]
